--- a/Kos/css/index.css
+++ b/Kos/css/index.css
@@ -118,17 +118,18 @@ a:hover {
 
 /* 上方導覽列 */
 .topbar {
-	background-color: transparent;
+	background-color: #d2ccc6;
 	width: 100%;
 	height: 60px;
 	font-weight: bold;
 	display: flex;
 	justify-content: center;
-	position: fixed;
+	position: sticky;  /* 使用sticky達到導覽列永遠固定在最上方的效果 */
 	top: 0px;
 	left: 0px;
 	z-index: 10;
 	transition: .2s;
+	box-shadow: 0px 0px 10px 2px rgba(210, 204, 198, 0.8);  /* 將陰影調整成和首頁背景色相同 */
 }
 
 /* 上方導覽列 內層包覆 */
