--- a/Kos/css/common.css
+++ b/Kos/css/common.css
@@ -1,4 +1,3 @@
-
 /*#region Common Style */
 
 :root {
@@ -14,8 +13,13 @@ body {
 	background-color: var(--background-color);
 	font-family: "Noto Sans CJK TC", "Microsoft JhengHei", "PingFang", "STHeiti", sans-serif, serif;
 	font-size: 1.3rem;
-	font-weight: bold;
+	font-weight: 500;
 	margin: 0;
+}
+
+/* 隱藏卷軸 */
+::-webkit-scrollbar {
+	width: 0px;
 }
 
 /* 超連結 */
@@ -126,10 +130,9 @@ a:hover {
 
 /* 上方導覽列 */
 .topbar {
-	background-color: #d2ccc6;
+	background-color: transparent;
 	width: 100%;
 	height: 60px;
-	font-weight: bold;
 	display: flex;
 	justify-content: center;
     /* position: sticky;  /* 使用sticky達到導覽列永遠固定在最上方的效果 */
@@ -138,7 +141,7 @@ a:hover {
 	left: 0px;
 	z-index: 10;
 	transition: .2s;
-	box-shadow: 0px 0px 10px 2px rgba(210, 204, 198, 0.8);  /* 將陰影調整成和首頁背景色相同 */
+	/*box-shadow: 0px 0px 10px 2px rgba(210, 204, 198, 0.8);  /* 將陰影調整成和首頁背景色相同 */
 }
 
 /* 上方導覽列 內層包覆 */
@@ -180,8 +183,14 @@ a:hover {
 /* 選單項目 a */
 .topbar li > a {
 	width: 100px;
+	font-weight: 500;
 	text-decoration: none;
 	color: var(--text-color);
+}
+
+/* 選單項目 a.active */
+.topbar li > a.active {
+	font-weight: bold;
 }
 
 /* 選單項目 a:hover, a:focus, a:active */
@@ -247,21 +256,21 @@ a:hover {
 /*#region Burger Menu */
 
 /* 當Menu被:target，顯示選單 */
-#menu:target {
+/*#menu:target {
 	display: block;
 	-webkit-animation: .2s ease 0s normal forwards 1 fadein;
     animation: .2s ease 0s normal forwards 1 fadein;
-}
+}*/
 
 /* 當Menu被:target，將body的overflow設為hidden */
-body:has(#menu:target) {
+/*body:has(#menu:target) {
 	overflow: hidden;
-}
+}*/
 
 /* 當Menu被:target，將卷軸隱藏 */
-body:has(#menu:target)::-webkit-scrollbar {
+/*body:has(#menu:target)::-webkit-scrollbar {
 	width: 0px;
-}
+}*/
 
 /* 淡入效果 */
 @keyframes fadein{
@@ -287,7 +296,7 @@ body:has(#menu:target)::-webkit-scrollbar {
 	display: none;
 	overflow: hidden;
 	padding: 20px;
-	opacity: .0;
+	/* opacity: .0; */
 	transition: .2s;
 }
 
