--- a/Kos/css/product.css
+++ b/Kos/css/product.css
@@ -35,3 +35,10 @@ body {
     justify-content: start;
     align-items: center;
 }
+
+/* 返回圖示 */
+.back-button img {
+    width: 20px;
+    height: 20px;
+    margin-right: 15px;
+}
