--- a/Kos/css/product.css
+++ b/Kos/css/product.css
@@ -1,20 +1,22 @@
-
+/* BODY */
 body {
     overflow: hidden;
 }
 
+/* 網頁內容區塊 */
 .content {
     width: 100vw;
     height: 100vh;
 }
 
-/* 商品圖片 */
+/* 商品圖片區塊 */
 .product-img {
     width: 58%;
     height: 100%;
     float: left;
 }
 
+/* 商品圖片 */
 .product-img img {
     object-fit: cover;
     width: 100%;
@@ -30,6 +32,7 @@ body {
     float: left;
 }
 
+/* 返回按鈕 */
 .back-button {
     display: flex;
     justify-content: start;
@@ -41,4 +44,125 @@ body {
     width: 20px;
     height: 20px;
     margin-right: 15px;
+}
+
+/* 商品標題區塊 */
+.product-title {
+    margin-top: 100px;
+    width: 100%;
+    height: 90px;
+    border-bottom: 4px solid #000;
+}
+
+/* 商品名稱 */
+.product-name {
+    font-size: 2.2rem;
+    float: left;
+    font-weight: bold;
+}
+
+/* 商品價格 */
+.product-price {
+    font-size: 1.8rem;
+    float: right;
+    margin-top: 5px;
+}
+
+/* 商品內容 */
+.product-content {
+    width: 100%;
+    height: calc(100vh - 460px);
+}
+
+/* 商品頁籤群組 */
+.product-detail {
+    width: 100%;
+    height: 80px;
+}
+
+/* 商品頁籤 */
+.product-content ul.product-tab {
+    padding-left: 0px;
+}
+
+/* 商品頁籤 li */
+.product-content ul.product-tab li {
+    margin: 20px 35px 20px 0px;
+    text-align: left;
+    list-style: none;
+    float: left;
+    white-space: nowrap;
+    min-width: 70px;
+}
+
+/* 商品頁籤 li a.active */
+.product-content ul.product-tab li a.active {
+    font-weight: bold;
+}
+
+/* 商品頁籤 顯示內容 active */
+.product-content .tab-content.active {
+    display: block;
+}
+
+/* 商品頁籤 顯示內容 disabled */
+.product-content .tab-content.disabled {
+    display: none;
+}
+
+/* 購買商品區塊 */
+.product-buy {
+    width: 100%;
+}
+
+/* 數量區塊 */
+.cart-count {
+    width: 50%;
+    float: left;
+    font-size: 1.2rem;
+    padding-top: 5px;
+}
+
+/* 數量區塊 div */
+.cart-count div {
+    float: left;
+}
+
+/* 加入購物車區塊 */
+.cart-add {
+    width: 50%;
+    float: right;
+    text-align: right;
+}
+
+/* 新增icon圖示 */
+.plus-icon {
+    width: 30px;
+    height: 30px;
+}
+
+/* 減少icon圖示 */
+.minus-icon {
+    width: 30px;
+    height: 30px;
+}
+
+/* 數字顯示 div */
+.number-label {
+    text-align: center;
+    width: 55px;
+}
+
+/* 數字顯示 */
+#number {
+    font-size: 1.5rem;
+    margin-top: -5px;
+}
+
+/* 加入購物車按鈕 */
+.cart-add a {
+    font-weight: bold;
+    font-size: 1.5rem;
+    border-bottom: 4px solid #000;
+    padding: 10px 0px;
 }
