--- a/Kos/css/product.css
+++ b/Kos/css/product.css
@@ -9,41 +9,139 @@ body {
     height: 100vh;
 }
 
-/* 商品圖片區塊 */
-.product-img {
-    width: 58%;
-    height: 100%;
-    float: left;
+/* XL以上 */
+@media (min-width: 1400px) {
+    /* 商品圖片區塊 */
+    .product-img {
+        width: 58%;
+        height: 100%;
+        float: left;
+    }
+
+    /* 商品圖片 */
+    .product-img img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+
+    /* 商品介紹 */
+    .product-intro {
+        width: 42%;
+        height: 100%;
+        box-sizing: border-box;
+        padding: 120px 5% 120px 5%;
+        float: left;
+    }
+    
+    /* 返回按鈕 */
+    .back-button {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+    }
+
+    /* 返回圖示 */
+    .back-button img {
+        width: 20px;
+        height: 20px;
+        margin-right: 15px;
+    }
 }
 
-/* 商品圖片 */
-.product-img img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+/* LG以下 */
+@media (max-width: 1399.98px) {
+
+    /* 商品圖片區塊 */
+    .product-img {
+        width: 45%;
+        height: 100%;
+        float: left;
+    }
+
+    /* 商品圖片 */
+    .product-img img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+
+    /* 商品介紹 */
+    .product-intro {
+        width: 55%;
+        height: 100%;
+        box-sizing: border-box;
+        padding: 120px 5% 120px 5%;
+        float: left;
+    }
+    
+    /* 返回按鈕 */
+    .back-button {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+    }
+
+    /* 返回圖示 */
+    .back-button img {
+        width: 20px;
+        height: 20px;
+        margin-right: 15px;
+    }
+
 }
 
-/* 商品介紹 */
-.product-intro {
-    width: 42%;
-    height: 100%;
-    box-sizing: border-box;
-    padding: 120px 5% 60px 5%;
-    float: left;
-}
+/* MD以下 */
+@media (max-width: 991.98px) {
 
-/* 返回按鈕 */
-.back-button {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-}
+    /* 商品圖片區塊 */
+    .product-img {
+        width: 100%;
+        height: 50vh;
+    }
 
-/* 返回圖示 */
-.back-button img {
-    width: 20px;
-    height: 20px;
-    margin-right: 15px;
+    /* 商品圖片 */
+    .product-img img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+
+    /* 商品介紹 */
+    .product-intro {
+        width: 100%;
+        height: 50vh;
+        box-sizing: border-box;
+        padding: 30px 5% 30px 5%;
+    }
+
+    /* 返回按鈕 */
+    .back-button {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        position: fixed;
+        top: 15px;
+        left: 15px;
+        font-weight: bold;
+        z-index: 15;
+    }
+
+    /* 返回圖示 */
+    .back-button img {
+        width: 20px;
+        height: 20px;
+        margin-right: 15px;
+    }
+
+    .topbar-logo > a {
+        display: none;
+    }
+
+    .mobile-bars {
+        display: none;
+    }
+
 }
 
 /* 商品標題區塊 */
@@ -72,6 +170,7 @@ body {
 .product-content {
     width: 100%;
     height: calc(100vh - 460px);
+    overflow: auto;
 }
 
 /* 商品頁籤群組 */
@@ -112,7 +211,13 @@ body {
 
 /* 購買商品區塊 */
 .product-buy {
-    width: 100%;
+    width: 42%;
+    height: 50px;
+    position: fixed;
+    bottom: 50px;
+    right: 0px;
+    padding: 0px 5%;
+    box-sizing: border-box;
 }
 
 /* 數量區塊 */
@@ -133,6 +238,7 @@ body {
     width: 50%;
     float: right;
     text-align: right;
+    white-space: nowrap;
 }
 
 /* 新增icon圖示 */
@@ -159,10 +265,110 @@ body {
     margin-top: -5px;
 }
 
-/* 加入購物車按鈕 */
-.cart-add a {
-    font-weight: bold;
-    font-size: 1.5rem;
-    border-bottom: 4px solid #000;
-    padding: 10px 0px;
+/* MD以上 */
+@media (min-width: 992px) {
+    /* 商品標題區塊 */
+    .product-title {
+        margin-top: 100px;
+    }
+
+    /* 商品內容 */
+    .product-content {
+        width: 100%;
+        height: calc(100vh - 460px);
+    }
+
+    /* 購買商品區塊 */
+    .product-buy {
+        width: 42%;
+    }
+
+    /* 隱藏手機板商品介紹區塊 */
+    .tab-content-mobile {
+        display: none;
+    }
+
+    /* 加入購物車按鈕 */
+    .cart-add a {
+        font-weight: bold;
+        font-size: 1.5rem;
+        border-bottom: 4px solid #000;
+        padding: 10px 0px;
+    }
+}
+
+/* MD以下 */
+@media (max-width: 991.98px) {
+    /* 商品標題區塊 */
+    .product-title {
+        margin-top: 0px;
+        height: 60px;
+    }
+
+    /* 商品內容 */
+    .product-content {
+        width: 100%;
+        height: calc(55vh - 220px);
+    }
+
+    /* 購買商品區塊 */
+    .product-buy {
+        width: 100%;
+        height: 50px;
+        position: fixed;
+        bottom: 30px;
+        right: 0px;
+        padding: 0px 5%;
+        box-sizing: border-box;
+    }
+
+    /* 商品名稱 */
+    .product-name {
+        font-size: 1.6rem;
+        float: left;
+        font-weight: bold;
+    }
+
+    /* 商品價格 */
+    .product-price {
+        font-size: 1.5rem;
+        float: right;
+        margin-top: 5px;
+    }
+
+    /* 商品頁籤 */
+    .product-detail {
+        display: none;
+    }
+
+    /* 隱藏電腦版頁籤 */
+    .tab-content {
+        display: none !important;
+    }
+
+    /* 顯示手機版商品介紹區塊 */
+    .tab-content-mobile {
+        padding-top: 20px;
+        display: block;
+    }
+
+    /* 加入購物車按鈕 */
+    .cart-add a {
+        font-weight: bold;
+        font-size: 1.3rem;
+        border-bottom: 4px solid #000;
+        padding: 10px 0px;
+    }
+}
+
+/* 淡入效果 */
+@keyframes fadein{
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+/* 淡入效果 */
+@-webkit-keyframes fadein{
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
