--- a/Kos/css/common.css
+++ b/Kos/css/common.css
@@ -387,5 +387,38 @@ a:hover {
 
 /*#region Cart */
 
+/* 手機版購物車數字 */
+.badge-cart {
+	/* border-radius: 50%; */
+	/* background-color: #000; */
+	min-width: 18px;
+	height: 18px;
+	padding: 2px;
+	font-size: 1.2rem;
+	color: #000;
+	text-align: center;
+	margin-top: -11px;
+	margin-left: 8px;
+	margin-right: 20px;
+	font-weight: bold;
+}
+
+#cart-panel {
+	display: none;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100vw;
+	height: 100vh;
+	padding: 20px;
+	box-sizing: border-box;
+	z-index: 20;
+	background-color: #f2f2f2;
+}
+
+.cart-times {
+	float: right;
+}
+
 
 /*#endregion Cart  */
