--- a/Kos/css/product.css
+++ b/Kos/css/product.css
@@ -361,6 +361,153 @@ body {
     }
 }
 
+
+
+/* MD以上 */
+@media (min-width: 992px) {
+    /* 提示區塊 */
+    #hint-panel {
+        display: none;
+    }
+
+    /* 加入購物車提示底色 */
+    .hint-bg {
+        background-color: rgba(0, 0, 0, 0.5);
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        width: 100vw;
+        height: 100vh;
+        z-index: 20;
+    }
+
+    /* 購物車提示 */
+    .cart-hint {
+        background-color: #F2F2F2;
+        position: fixed;
+        top: 0px;
+        left: calc((100vw - 500px) / 2);
+        width: 500px;
+        min-height: 250px;
+        z-index: 25;
+        padding: 20px;
+        box-sizing: border-box;
+    }
+
+    
+}
+
+/* MD以下 */
+@media (max-width: 991.98px) {
+
+    /* 提示區塊 */
+    #hint-panel {
+        display: none;
+    }
+
+    /* 加入購物車提示底色 */
+    .hint-bg {
+        background-color: rgba(0, 0, 0, 0.5);
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        width: 100vw;
+        height: 100vh;
+        z-index: 20;
+    }
+
+    /* 購物車提示 */
+    .cart-hint {
+        background-color: #F2F2F2;
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        min-height: 250px;
+        z-index: 25;
+        padding: 20px;
+        box-sizing: border-box;
+    }
+}
+
+/* 提示標題 */
+.cart-hint-title > .hint-text {
+    float: left;
+}
+
+/* 提示標題文字 */
+.cart-hint-title > .hint-text > span {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    height: 30px;
+    font-weight: bold;
+}
+
+/* 提示標題icon */
+.cart-hint-title > .hint-text > span > img {
+    height: 25px;
+    margin-right: 15px;
+}
+
+/* 提示標題關閉按鈕 */
+.cart-hint-title > .hint-times {
+    float: right;
+}
+
+/* 商品項目 */
+.cart-hint-item {
+    margin-top: 60px;
+    width: 100%;
+    height: 100px;
+}
+
+/* 商品圖片 */
+.cart-hint-img {
+    float: left;
+    width: 80px;
+    height: 80px;
+}
+
+/* 商品圖片 */
+.cart-hint-img > img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+/* 商品資訊 */
+.cart-hint-info {
+    float: left;
+    width: calc(100% - 80px);
+    padding: 0px 0px 0px 20px;
+    box-sizing: border-box;
+}
+
+/* 商品名稱 */
+.cart-hint-info .item-name {
+    font-weight: bold;
+}
+
+/* 商品價格 */
+.cart-hint-info .item-price {
+    margin-top: 5px;
+}
+
+/* 查看購物車 */
+.cart-hint-view {
+    width: 100%;
+    text-align: right;
+}
+
+/* 查看購物車 超連結 */
+.cart-hint-view a {
+    font-weight: bold;
+    font-size: 1.2rem;
+    border-bottom: 3px solid #000;
+    padding: 0px 0px 15px 0px;
+}
+
 /* 淡入效果 */
 @keyframes fadein{
     0% { opacity: 0; }
