--- a/Kos/css/common.css
+++ b/Kos/css/common.css
@@ -403,22 +403,147 @@ a:hover {
 	font-weight: bold;
 }
 
-#cart-panel {
-	display: none;
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	width: 100vw;
-	height: 100vh;
-	padding: 20px;
-	box-sizing: border-box;
-	z-index: 20;
-	background-color: #f2f2f2;
+/* XL以上 */
+@media (min-width: 1400px) {
+	/* 購物車介面 */
+	#cart-panel {
+		display: none;
+		position: fixed;
+		top: 0px;
+		right: 0px;
+		width: 42vw;
+		height: 100vh;
+		padding: 20px 80px;
+		box-sizing: border-box;
+		z-index: 20;
+		background-color: #f2f2f2;
+	}
+
+	/* 購物車標題 */
+	.cart-title {
+		font-size: 1.6rem;
+		padding: 40px 0px;
+	}
+
 }
 
+/* LG以下 */
+@media (max-width: 1399.98px) {
+	/* 購物車介面 */
+	#cart-panel {
+		display: none;
+		position: fixed;
+		top: 0px;
+		right: 0px;
+		width: 55vw;
+		height: 100vh;
+		padding: 20px;
+		box-sizing: border-box;
+		z-index: 20;
+		background-color: #f2f2f2;
+	}
+
+	/* 購物車標題 */
+	.cart-title {
+		font-size: 1.6rem;
+		padding: 40px 0px;
+	}
+}
+
+/* MD以下 */
+@media (max-width: 991.98px) {
+	/* 購物車介面 */
+	#cart-panel {
+		display: none;
+		position: fixed;
+		top: 0px;
+		left: 0px;
+		width: 100vw;
+		height: 100vh;
+		padding: 20px;
+		box-sizing: border-box;
+		z-index: 20;
+		background-color: #f2f2f2;
+	}
+
+	/* 購物車標題 */
+	.cart-title {
+		font-size: 1.2rem;
+		padding: 40px 0px;
+	}
+}
+
+/* 關閉按鈕 */
 .cart-times {
 	float: right;
 }
 
+/* 購物車標頭 */
+.cart-head {
+	width: 100%;
+	height: 120px;
+}
+
+/* 購物車內容 */
+.cart-body {
+	width: 100%;
+	height: calc(100% - 240px);
+}
+
+/* 購物車底部 */
+.cart-footer {
+	width: 100%;
+	height: 120px;
+}
+
+.cart-table {
+	width: 100%;
+}
+
+.cart-table > tbody > tr > td {
+	border-top: 3px solid #000;
+	border-bottom: 3px solid #000;
+	padding: 30px 20px;
+}
+
+
+.cart-column1 {
+	float: left;
+	width: 100px;
+}
+
+.cart-column2 {
+	float: left;
+	width: calc(100% - 180px);
+	box-sizing: border-box;
+	padding: 0px 30px;
+}
+
+.cart-column3 {
+	float: left;
+	width: 80px;
+	text-align: right;
+}
+
+.cart-img-cover {
+	width: 100px;
+	height: 100px;
+}
+
+.cart-img-cover img {
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+}
+
+.cart-name {
+	width: 100%;
+	height: 60px;
+}
+
+.cart-price {
+	width: 100%;
+	height: 60px;
+}
 
 /*#endregion Cart  */
