--- a/Kos/css/common.css
+++ b/Kos/css/common.css
@@ -403,8 +403,8 @@ a:hover {
 	font-weight: bold;
 }
 
-/* XL以上 */
-@media (min-width: 1400px) {
+/* XXL以上 */
+@media (min-width: 1660px) {
 	/* 購物車介面 */
 	#cart-panel {
 		display: none;
@@ -417,12 +417,62 @@ a:hover {
 		box-sizing: border-box;
 		z-index: 20;
 		background-color: #f2f2f2;
+		border-left: 1px solid #d1d0d0;
 	}
 
 	/* 購物車標題 */
 	.cart-title {
 		font-size: 1.6rem;
 		padding: 40px 0px;
+	}
+
+	/* 購物車標題 */
+	.cart-title {
+		font-size: 1.6rem;
+		padding: 40px 0px;
+	}
+
+	/* 購物車內容 */
+	.cart-body {
+		width: 100%;
+		height: calc(100% - 210px);
+	}
+
+}
+
+/* XL */
+@media (max-width: 1659.98px) {
+	/* 購物車介面 */
+	#cart-panel {
+		display: none;
+		position: fixed;
+		top: 0px;
+		right: 0px;
+		width: 42vw;
+		height: 100vh;
+		padding: 20px 60px;
+		box-sizing: border-box;
+		z-index: 20;
+		background-color: #f2f2f2;
+		border-left: 1px solid #d1d0d0;
+	}
+
+	/* 購物車標頭 */
+	.cart-head {
+		width: 100%;
+		height: 120px;
+	}
+
+	/* 購物車標題 */
+	.cart-title {
+		font-size: 1.6rem;
+		padding: 40px 0px;
+	}
+
+	/* 購物車內容 */
+	.cart-body {
+		width: 100%;
+		height: calc(100% - 210px);
 	}
 
 }
@@ -437,16 +487,29 @@ a:hover {
 		right: 0px;
 		width: 55vw;
 		height: 100vh;
-		padding: 20px;
+		padding: 20px 60px;
 		box-sizing: border-box;
 		z-index: 20;
 		background-color: #f2f2f2;
+		border-left: 1px solid #d1d0d0;
+	}
+
+	/* 購物車標頭 */
+	.cart-head {
+		width: 100%;
+		height: 120px;
 	}
 
 	/* 購物車標題 */
 	.cart-title {
 		font-size: 1.6rem;
 		padding: 40px 0px;
+	}
+
+	/* 購物車內容 */
+	.cart-body {
+		width: 100%;
+		height: calc(100% - 210px);
 	}
 }
 
@@ -466,11 +529,67 @@ a:hover {
 		background-color: #f2f2f2;
 	}
 
+	/* 購物車標頭 */
+	.cart-head {
+		width: 100%;
+		height: 80px;
+	}
+
 	/* 購物車標題 */
 	.cart-title {
-		font-size: 1.2rem;
-		padding: 40px 0px;
+		font-size: 1.5rem;
+		padding: 20px 0px;
 	}
+
+	/* 購物車內容 */
+	.cart-body {
+		width: 100%;
+		height: calc(100% - 160px);
+	}
+}
+
+#cart-panel .cart-count {
+	width: 100%;
+	float: left;
+    font-size: 1.2rem;
+    padding-top: 5px;
+}
+
+/* 數量區塊 div */
+#cart-panel .cart-count div {
+    float: left;
+}
+
+/* 加入購物車區塊 */
+#cart-panel .cart-add {
+    width: 50%;
+    float: right;
+    text-align: right;
+    white-space: nowrap;
+}
+
+/* 新增icon圖示 */
+#cart-panel .plus-icon {
+    width: 30px;
+    height: 30px;
+}
+
+/* 減少icon圖示 */
+#cart-panel .minus-icon {
+    width: 30px;
+    height: 30px;
+}
+
+/* 數字顯示 div */
+#cart-panel .number-label {
+    text-align: center;
+    width: 55px;
+}
+
+/* 數字顯示 */
+.cart-number {
+    font-size: 1.5rem;
+    margin-top: -5px;
 }
 
 /* 關閉按鈕 */
@@ -478,40 +597,29 @@ a:hover {
 	float: right;
 }
 
-/* 購物車標頭 */
-.cart-head {
-	width: 100%;
-	height: 120px;
-}
-
-/* 購物車內容 */
-.cart-body {
-	width: 100%;
-	height: calc(100% - 240px);
-}
-
-/* 購物車底部 */
-.cart-footer {
-	width: 100%;
-	height: 120px;
-}
-
+/* 購物車表格 */
 .cart-table {
 	width: 100%;
 }
 
+/* 購物車表格 td */
 .cart-table > tbody > tr > td {
-	border-top: 3px solid #000;
-	border-bottom: 3px solid #000;
-	padding: 30px 20px;
+	/* border-top: 3px solid #000; */
+	padding: 20px 0px;
 }
 
+/* 購物車表格 tr:first-child td */
+.cart-table > tbody > tr:first-child > td {
+	border-top: none;
+}
 
+/* 購物車 圖片 */
 .cart-column1 {
 	float: left;
 	width: 100px;
 }
 
+/* 購物車 品名數量 */
 .cart-column2 {
 	float: left;
 	width: calc(100% - 180px);
@@ -519,31 +627,105 @@ a:hover {
 	padding: 0px 30px;
 }
 
+/* 購物車 價格刪除 */
 .cart-column3 {
 	float: left;
 	width: 80px;
 	text-align: right;
 }
 
+/* 購物車圖片大小 */
 .cart-img-cover {
 	width: 100px;
 	height: 100px;
 }
 
+/* 購物車圖片 */
 .cart-img-cover img {
 	object-fit: cover;
 	width: 100%;
 	height: 100%;
 }
 
+/* 購物車商品名稱 */
 .cart-name {
 	width: 100%;
 	height: 60px;
 }
 
+/* 購物車商品價格 */
 .cart-price {
 	width: 100%;
 	height: 60px;
+}
+
+#cart-no-item {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#cart-item-list {
+	width: 100%;
+	height: 100%;
+}
+
+/* 購物車 表格內容 (超出要出現卷軸) */
+.cart-content-table {
+	width: 100%;
+	max-height: calc(100% - 50px);
+	overflow-y: auto;
+	border-top: 3px solid #000;
+}
+
+/* 卷軸樣式-底 */
+.cart-content-table::-webkit-scrollbar {
+	width: 0px;
+	height: 5px;
+	background-color: var(--webkit-scrollbar-color);
+}
+
+/* 卷軸樣式-軸 */
+.cart-content-table::-webkit-scrollbar-thumb {
+	background: var(--webkit-scrollbar-thumb-color);
+}
+
+.cart-content-total {
+	height: 50px;
+	width: 100%;
+	display: flex;
+	justify-content: start;
+	align-items: center;
+	border-top: 3px solid #000;
+}
+
+.total-count {
+	float: left;
+	width: 50%;
+}
+
+.total-price {
+	float: right;
+	width: 50%;
+	text-align: right;
+}
+
+/* 購物車底部 */
+.cart-footer {
+	width: 100%;
+	height: 70px;
+	display: flex;
+	justify-content: end;
+	align-items: center;
+}
+
+.cart-footer a {
+	font-weight: bold;
+	font-size: 1.5rem;
+	border-bottom: 4px solid #000;
+	padding: 10px 0px;
 }
 
 /*#endregion Cart  */
